realizei a responsividade de tela para desktop

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="midia.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
                     <input class="input" id="telefone" type="tel" name="telefone" placeholder="Telefone" required>
 
                     <div class="cont_esp">
-                        <label class="input" for="especialidade">Especialiade</label>
+                        <label class="opcoes" class="input" for="especialidade">Especialiade</label>
                         <select name="especialidade" id="especialidade">
                             <option value="">Selecione</option>
                             <option value="esp1">exp1</option>
@@ -40,7 +41,7 @@
                         </select>
                     </div>
                     <div class="cont_medicos">
-                        <label class="input" for="medicos">Quantos Médicos a clínica possui?</label>
+                        <label class="opcoes" class="input" for="medicos">Quantos Médicos a clínica possui?</label>
                         <select name="medicos" id="medicos">
                             <option value="">Selecione</option>
                             <option value="exp1">0-2</option>
@@ -50,8 +51,8 @@
                         </select>
                     </div>
                     <div class="cont_planos">
-                        <label class="input" for="medicos">Plano desejado</label>
-                        <select class="lista" name="plano" id="plano">
+                        <label class="opcoes" class="input" for="medicos">Plano desejado</label>
+                        <select  name="plano" id="plano">
                             <option value="">Selecione</option>
                             <option value="plan1">free plan</option>
                             <option value="plan1">Starter</option>
