--- a/bt_site/cadastro/index.html
+++ b/bt_site/cadastro/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="preencher_cadastro">
             <div class="forms">
-                <form class="input_forms" action="#" method="get">
+                <form class="input_forms" action="#" method="post">
                     <input class="input" id="nome" type="text" name="name" placeholder="Nome completo" required>
 
                     <input class="input" id="email" type="email" name="email" placeholder="E-mail" required>
@@ -71,7 +71,7 @@
                     </div>
                 </form>
                 <div class="botao">
-                    <button><a href="#">Enviar</a></button>
+                    <button class="enviar">Enviar</button>
                 </div>
             </div>
 
@@ -95,6 +95,8 @@
             </div>
         </div>
     </div>
+    <script src="./telaEnvia.js"></script>
 </body>
+
 
 </html>
